--- a/_sass/_experience.scss
+++ b/_sass/_experience.scss
@@ -129,7 +129,6 @@
   height: 80px;
   object-fit: contain;
   margin-right: 10px;
-  margin-left: 10px;
 }
 
 .mission-title {
